<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clDialogDataLost"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DialogDataLostFragment">

    <TextView
        android:letterSpacing="0.1"
        style="@style/NormalTitleText"
        android:id="@+id/tv_version"
        android:layout_height="wrap_content"
        android:layout_marginTop="328dp"
        android:text="@string/data_be_lost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        style="@style/NormalButton"
        android:id="@+id/btNo_DialogDataLost"
        android:layout_marginStart="444dp"
        android:layout_marginTop="640dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/btn_rrect_e6e6e6_184"
        android:text="@string/f85_no"
        android:textColor="@color/color597084"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        style="@style/NormalButton"
        android:id="@+id/btYes_DialogDataLost"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="444dp"
        android:text="@string/f85_yes"
        android:textColor="@color/colorFFFFFF"
        android:background="@drawable/btn_rrect_9d2227_184"
        app:layout_constraintBottom_toBottomOf="@+id/btNo_DialogDataLost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btNo_DialogDataLost"
        app:layout_constraintTop_toTopOf="@+id/btNo_DialogDataLost" />


</androidx.constraintlayout.widget.ConstraintLayout>