<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFFFFFF"
    tools:context=".profile.ProfileFragment">

    <RadioGroup
        android:id="@+id/rgOption_Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:checked="true"
            android:id="@+id/rbInfo_Profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/rb_rect_info"/>

        <RadioButton
            android:id="@+id/rbHistory_Profile"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="81dp"
            android:layout_marginRight="81dp"
            android:button="@drawable/rb_rect_history"/>

        <RadioButton
            android:id="@+id/rbFavorite_Profile"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:button="@drawable/rb_rect_favorites"/>

    </RadioGroup>

    <TextView
        android:textColor="@color/colorE4002B"
        style="@style/slide_menu_text"
        android:id="@+id/tvInfo_Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        app:layout_constraintStart_toStartOf="@+id/rgOption_Profile"
        app:layout_constraintTop_toTopOf="@+id/tvFavorite_Profile" />

    <TextView
        style="@style/slide_menu_text"
        android:id="@+id/tvHistory_Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:text="@string/history"
        app:layout_constraintStart_toEndOf="@+id/tvInfo_Profile"
        app:layout_constraintTop_toTopOf="@+id/tvFavorite_Profile" />

    <TextView
        android:id="@+id/tvFavorite_Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorites"
        style="@style/slide_menu_text"
        app:layout_constraintEnd_toEndOf="@+id/rgOption_Profile"
        app:layout_constraintTop_toTopOf="@+id/rgOption_Profile" />

    <View
        android:layout_marginTop="192dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorDEE2E6"
        android:visibility="visible"
        android:id="@+id/ivTopLine_Programs"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <!--    android:layout_marginTop="13.5dp"
            android:paddingStart="13dp"
            android:paddingEnd="13dp"
    -->
    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="112dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivTopLine_Programs" />

</androidx.constraintlayout.widget.ConstraintLayout>